CoS misc comments

--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -208,6 +208,7 @@
 \include{text/ch3-orion}
 \include{text/chx-misc}
 
+% TODO Add publications and contributions
 
 %% APPENDICES %% 
 % Starts lettered appendices, adds a heading in table of contents, and adds a
