--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -39,11 +39,12 @@ Here, the second term of Equation \ref{eq:hamiltonian_general} describes the con
 
 Decomposing the electron's 3-momentum into orthogonal components: $p_\mathrm{prop}$, along the laser propagation direction, $p_\mathrm{pol}$, along the polarisation axis of the laser pulse and $p_\perp$, perpendicular to both, there are two simplifications to be made. Firstly, by canonical conservation of transverse momentum, $p_\mathrm{pol} = eA$, where $A$ is the laser vector potential amplitude. Secondly, in the case of a p-polarised laser pulse (the known optimum for ZVP electron bunch generation \cite{savinAttosecondscaleAbsorptionExtreme2017} and \ac{HHG} \cite{baevaTheoryHighorderHarmonic2006}), with reference to Figure \ref{fig:zvpforcesppol} and the Lorentz force law, the forces at play confine the electron trajectory to the $p_\mathrm{prop}$-$p_\mathrm{pol}$ plane and the essential interaction geometry is two-dimensional. This is provided one considers length scales smaller than the focal spot of the laser pulse on the target, such that variation of the ponderomotive pressure with the third dimension can be neglected.
 
+% TODO potentially include a sketch of the potential well for clarity
 Explicitly, the Hamiltonian can be written as
 \begin{equation}\label{eq:hamiltonian_specific}
 	\mathcal{H} = c\sqrt{m^2_ec^2 + p^2_\mathrm{prop} + e^2A^2} - e\Phi.
 \end{equation}
-From Equation \ref{eq:hamiltonian_specific} it is clear that should the vector potential pass through zero, one of potential well walls is totally suppressed, enabling electrons in the skin layer to escape the plasma, breaking adiabaticity. The necessity of vector potential zeros for this violent reconstruction of the plasma surface led Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} to coin the term `Zero Vector Potential' mechanism to describe this process. Indeed, while elementary electromagnetism tells us a laser pulse will exponentially decay within a skin layer of a plasma without passing through zero, Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} demonstrated in \ac{PIC} simulations that in this non-linear regime, zeros do exist and do propagate through the skin layer. The explanation relies on a Doppler shift in the laser field due to the relativistic motion of the ablating plasma surface, and a mathematical formalism of this process proceeds as follows.
+Equation \ref{eq:hamiltonian_specific} describes a potential well that contrains the electrons, on one side longitudinal space charge$- e\Phi$ term prevents further propagation into the target while on the other term associated with the vector potential of the laser pulse, $ e^2A^2$. t is clear that should the vector potential pass through zero\footnote{Note that in writing $p_\mathrm{pol} = eA$ one has determined the gauge in which the zero becomes a defined quantity}, one of potential well walls is totally suppressed, enabling electrons in the skin layer to escape the plasma, breaking adiabaticity. The necessity of vector potential zeros for this violent reconstruction of the plasma surface led Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} to coin the term `Zero Vector Potential' mechanism to describe this process. Indeed, while elementary electromagnetism tells us a laser pulse will exponentially decay within a skin layer of a plasma without passing through zero, Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} demonstrated in \ac{PIC} simulations that in this non-linear regime, zeros do exist and do propagate through the skin layer. The explanation relies on a Doppler shift in the laser field due to the relativistic motion of the ablating plasma surface, and a mathematical formalism of this process proceeds as follows.
 
 % TODO: \textbf{**Must also discuss the impact of relativity in creating the observed phenomena, probably at energy scaling section?**}
 
@@ -78,7 +79,7 @@ While previous demonstrations of the existance of vector potential zeros assumed
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\linewidth]{figures/zvp/zvp_ablating_front}
-	\caption[Diagram of a $p$-polarised laser pulse incident on an ablating overdense plasma.]{Diagram of a $p$-polarised laser pulse incident on an ablating overdense plasma. The laser is incident obliquely at an angle of $\theta$ and is reflected specularly. The plasma ablates specularly also. The interaction geometry is confined to a 2D plane.}
+	\caption[Diagram of a $p$-polarised laser pulse incident on an ablating overdense plasma.]{Diagram of a $p$-polarised laser pulse incident on an ablating overdense plasma. The laser is incident obliquely at an angle of $\theta$ and is reflected specularly. The plasma ablates specularly also. Note that this process occurs on sub-laser pulse cycle timescales and it is therefore only the electrons that are ablating in this process. The interaction geometry is confined to a 2D plane.}
 	\label{fig:zvp_ablatingfront}
 \end{figure}
 The direction of polarisation is
