--- a/text/ch3-orion.tex
+++ b/text/ch3-orion.tex
@@ -69,7 +69,7 @@ The ORION SP2 beamline intensity temporal profile can be modelled as
 \begin{equation}\label{eq:orion_SP2_temporal}
 	I_\mathrm{SP2} \sim (I_{0 \ \mathrm{p}}\sech(t/t_\mathrm{p})^2 + I_{0 \ \mathrm{pp}}e^{-(t/t_\mathrm{pp})^2} + I_{0 \ \mathrm{ps}}e^{-\mathrm{abs}(t)/t_\mathrm{ps}} + I_{0 \ \mathrm{ns}}e^{-(t/t_\mathrm{ns})^8}),
 \end{equation}
-where the constants are detailed in Table \ref{tab:orion_pedestals}.
+where the constants are detailed in Table \ref{tab:orion_pedestals} \cite{dhillierModelORIONContrast2022}.
 \begin{table}[]
 	\centering
 	\begin{tabular}{lcc}
